2009-05-27  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* num.h (tino_num_secondsA): added

2009-05-26  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* aux.h (tino_aux_timestampOn): added (and many other routines in
	this module)

	* arg.h (tino_snprintf_ret): added

	* dirty.h (tino_strxcpy): added

	* data_tool.h (tino_data_timestampO): added

2009-05-21  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* sysfix_cygwin.h: sighandler_t added for CygWin which does not
	define it.

2009-04-09  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* slist.h (tino_slist_add): now uses tino_glist_add_ptr()
	(tino_glist_add_ptr): added

	* alloc.h (TINO_FREE_NULL): now no more modifies errno

2009-03-24  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* scale.h (tino_scale_slew_avg): added
	(TINO_SCALE_SLEW_HISTORY): define this to the history length if
	needed

	* arg.h (tino_snprintf): now compiles again

2009-03-17  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* auxbuf.h (tino_auxbuf_clearOn): this now does work
	(tino_auxbufOn): added length support and AUXBUF nulling if first
	initialized

	* scale.h (tino_scale_number): no scaling if at 0, so 0 stays 0.
	Anything not zero (very small) becomes 0.0

2009-03-02  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* sockbuf.h (tino_sockbuf_processN): exceptions now are really
	handled if the exception function is set.
	(tino_sockbuf_processN, tino_sockbuf_new_userO): added allocated
	user buffer

2009-03-02  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* proc.h (tino_wait_child_p): spurious compile time warning removed

2009-02-12  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* arg.h (tino_fprintf, tino_snprintf): added

2009-02-12  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* data.h (tino_data_fileO): naming standard corrected
	(tino_data_file_closeA): now handles EINTR correctly.

2009-02-04  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* privilege.h (tino_privilege_end_elevationE): errors added and